<resources>
    <string name="app_name">Zivotot e Krug</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_number">Your Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Re-type Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="volunteer">Volunteer</string>
    <string name="adult">Adult</string>
    <string name="organizer">Organizer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">All</string>
    <string name="new_task">New</string>
    <string name="review_task">Review</string>
    <string name="name_of_activity">Name of Task</string>
    <string name="describe_the_task">Describe the Task</string>
    <string name="repetitive">Repetitive</string>
    <string name="nonRepetitive">Non repetitive</string>
    <string name="dateFormat">DD/MM/YYYY</string>
    <string name="urgent">Urgent</string>
    <string name="non_urgent">Non Urgent</string>
    <string name="create_task">Create Task</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="set_rating">Set Rating</string>
    <string name="apply">Apply</string>
    <string-array name="Rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>