<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.users.adult.NewTaskFragment">

    <EditText
        android:id="@+id/name_of_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/edit_text_background_color"
        android:hint="@string/name_of_activity"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description_of_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/edit_text_background_color"
        android:hint="@string/describe_the_task"
        android:inputType="text"
        android:maxLines="3"
        android:minHeight="144dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_of_activity" />

    <TextView
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/edit_text_background_color"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/dateFormat"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_of_activity" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:imeOptions="actionDone"
        app:checkedChip="@+id/repetitive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/datePicker"
        app:layout_constraintTop_toBottomOf="@+id/description_of_activity"
        app:singleSelection="true">

    <com.google.android.material.chip.Chip
    android:id="@+id/repetitive"
    style="@style/CustomChipStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/repetitive" />

    <com.google.android.material.chip.Chip
        android:id="@+id/non_repetitive"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nonRepetitive" />
    </com.google.android.material.chip.ChipGroup>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/urgencyChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:imeOptions="actionDone"
        app:checkedChip="@+id/urgent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/urgent"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/non_urgent"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_urgent" />
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:id="@+id/locationPicker"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/edit_text_background_color"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="Location"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/urgencyChipGroup" />
        <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/location"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/locationPicker"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/locationPicker"
            app:layout_constraintBottom_toBottomOf="@id/locationPicker"
            android:src="@drawable/my_location"
            android:background="@color/background_color"
            app:tint="@color/black" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_task"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/black"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/description_of_activity"
        app:layout_constraintStart_toStartOf="@+id/description_of_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>